tests/NormalTests/paczka1/fuzzy1/72328308.err
Error in line 16: StGb A637 19,86
Error in line 20: A920 S22 39,8
Error in line 33: StGb A637 80,0
